--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://en.wiktionary.org/wiki/National_Socialism
 # vernietigingskamp
 https://en.wiktionary.org/wiki/vernietigingskamp
 
+# rotterdam
+https://en.wikipedia.org/wiki/Rotterdam
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
